17 May 2005:  Menelaos Karavelas
- changed maintainer's email

13 May 2005:  Menelaos Karavelas
- added typedefs for result_type, argument_type and Arity in
  Svd_degenerate_edge_2 class; the operator() in this class was also made
  const

7 March 2005:  Menelaos Karavelas
- replaced calls to the vertex handle methods degree() and
  incident_{edges,faces}() by calls to the corresponding TDS methods that
  take the vertex as argument. This was done in compliance with the latest
  changes in the design of the Triangulation_2 software.

18 November 2004 Sylvain Pion
- g++ 3.4.[23] workaround.

4 October 2004:  Menelaos Karavelas
- fixed warnings for VC++ IDE mentioned by Andreas (a class was initially
  defined as a struct but a specilization of which as a class; now everything
  is a class)

22 September 2004:  Menelaos Karavelas
- added specializations of the non-filtered traits classes for the
  Filtered_kernel

20 September 2004:  Menelaos Karavelas
- added missing sites2.cin data file in examples/data directory
- added missing svd-join_split.* files needed for documentation of the
  segment Voronoi diagram data structure concept

9 September 2004:  Menelaos Karavelas
- added third example (in examples/subdir and in doc) that shows how
  to recover the data for the Voronoi edges.

7 September 2004:  Menelaos Karavelas
- Documentation & code: replaced Agds_2 by Tds_2

3 September 2004:  Menelaos Karavelas
- test_svd_2_et.C: in definition of sqrt for Gmpq, I qualified the calls to
  to_double and sqrt by CGAL::
- polygon Voronoi diagram demo: fixed bugs in class
  Segment_Voronoi_diagram_vertex_base_with_info_2
- pvd_typedefs.h: replaced SVD_data_structure_2 by AG_data_structure_2
- Square_root_{1,2}: fixes for g++-3.4 (essentially kept the code under
  CGAL_USE_ADL_FOR_NT and removed the alternative code)
- documentation: added chapter author

30 August 2004:  Menelaos Karavelas
- SVD_kernel_wrapper_2 : removed unused variable (it was creating warnings