@@ -1,3 +1,8 @@
+19 May 2005:  Menelaos Karavelas
+- added the types Vertex, Face and Triangulation_data_structure in the
+  Segment_Voronoi_diagram_2 class; these types should also appear in the
+  doc of the class
+
 17 May 2005:  Menelaos Karavelas
 - changed maintainer's email
 
